--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
             on GitHub</a
           >
           and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="my-first-shecodes-project1.netlify.app" target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
